Fixed article spacing and border issues.

--- a/resources/css/base/buttons.css
+++ b/resources/css/base/buttons.css
@@ -32,8 +32,14 @@
 .btn--link {
     background-color: transparent;
     font-weight: normal;
-    padding: 0 !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
     text-decoration: underline;
+    opacity: 0.7;
+}
+
+.btn--link:hover {
+    opacity: 1;
 }
 
 .btn--glimmer {
